--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="text-block">
                 Чтож. Это было раннее утро воскресенья. Тогда произошло
-                недовольное лицо в виде меня. Далее будет рандомная инфа из моего диплома, так как мне было лениво придуывать новый текст
+                недовольное лицо в виде меня. Далее будет рандомная инфа из моего диплома, так как мне было лениво придумывать новый текст
                 <br>
                 <h2>1.1.1. Базовые понятия и определения в машинном обучении</h2> <br>
 
